<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="50dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_username"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="text"
        android:hint="@string/login_username_hint">
    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_password"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="@string/login_password_hint">
    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_login"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/login_login_hint">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_signup"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_signup_hint">
    </androidx.appcompat.widget.AppCompatButton>

</LinearLayout>